# NTT-Demo

./: CMakeLists.txt  readme.md
include/: ntt.h
src/: ntt.cpp
tests/: test_main.cpp
